force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Gift Aid Claim Setting</label>
    <pluralLabel>Gift Aid Claim Settings</pluralLabel>
</CustomObject>