force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Authorised_Official__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Authorised_Official__c</fullName>
    <description>Person within the charity/CASC authorised to make this claim. This may also be a corporate
trustee.</description>
    <inlineHelpText>Person within the charity/CASC authorised to make this claim. This may also be a corporate
trustee.</inlineHelpText>
    <label>Authorised Official</label>
    <length>2047</length>
    <type>LongTextArea</type>
</CustomField>