force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Create_Contact_Report_for_Declaration__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Create_Contact_Report_for_Declaration__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create Contact Report for Declaration</label>
    <type>Checkbox</type>
</CustomField>