force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Declaration_Email_Table_Setting__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Declaration_Email_Table_Setting__c</fullName>
    <label>Declaration Email Table Setting</label>
    <length>127</length>
    <type>Text</type>
</CustomField>