force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Declaration_Interim_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Declaration_Interim_Prefix__c</fullName>
    <label>Declaration Interim Prefix</label>
    <length>7</length>
    <type>Text</type>
</CustomField>