force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Gift_Aid_Claim_UI_Display_Settings__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Gift_Aid_Claim_UI_Display_Settings__c</fullName>
    <label>Gift Aid Claim UI Display Settings</label>
    <length>8191</length>
    <type>LongTextArea</type>
</CustomField>