force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__HMRC_Reference__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__HMRC_Reference__c</fullName>
    <description>the HMRC charities reference, termed the Charity ID of the organisation</description>
    <inlineHelpText>the HMRC charities reference, termed the Charity ID of the organisation</inlineHelpText>
    <label>HMRC Reference</label>
    <length>63</length>
    <required>true</required>
    <type>Text</type>
</CustomField>