force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Operation_Mode__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Operation_Mode__c</fullName>
    <label>Operation Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Local Testing Service</fullName>
                <default>true</default>
                <label>Local Testing Service</label>
            </value>
            <value>
                <fullName>Live Testing Service</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>