force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Organisation_Name__c</fullName>
    <description>Name of the Organisation making the submission to HMRC</description>
    <inlineHelpText>Name of the Organisation making the submission to HMRC</inlineHelpText>
    <label>Organisation Name</label>
    <length>127</length>
    <required>true</required>
    <type>Text</type>
</CustomField>