force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Percentage_Range_JSON__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Percentage_Range_JSON__c</fullName>
    <label>Percentage Range JSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>