force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Regulator__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Regulator__c</fullName>
    <label>Regulator</label>
    <type>TextArea</type>
</CustomField>