force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Sender_Type__c</fullName>
    <label>Sender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Individual</fullName>
                <default>true</default>
                <label>Individual</label>
            </value>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Bureau</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Acting in Capacity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>