force-app/main/default/objects/ucinn_ascendv2__Gift_Aid_Claim_Setting__mdt/fields/ucinn_ascendv2__Tender_Types_to_Include__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Tender_Types_to_Include__c</fullName>
    <label>Tender Types to Include</label>
    <length>1023</length>
    <type>LongTextArea</type>
</CustomField>